--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio3d",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
