--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emailjs/browser": "^3.10.0",
     "@react-three/drei": "^9.57.3",
     "@react-three/fiber": "^8.12.0",
+    "@sanity/client": "^5.4.2",
+    "@sanity/image-url": "^1.0.2",
     "framer-motion": "^10.3.0",
     "googleapis": "^118.0.0",
     "maath": "^0.5.2",
